--- a/tasks/prelim.yml
+++ b/tasks/prelim.yml
@@ -29,6 +29,8 @@
   apt:
     update_cache: true
   changed_when: false
+  when:
+      - not debian9cis_offline
 
 - name: "PRELIM | Section 4.1 | Configure System Accounting (auditd)"
   apt:
